--- a/stylekarina.css
+++ b/stylekarina.css
@@ -1,15 +1,52 @@
- body{
-    background: #65327c;
- }
- h1 {
+body {
+   
+}
+
+#banner {
+    width:100%;
+}
+
+.principal{
+    background: #CCCCCC;
+    padding: 30px;
+}
+
+.titulo-principal {
+    padding-left: 20px;
+}
+
+.titulo-centralizado {
+    text-align: center
+}
+
+p {
     text-align: center;
- }
- p {
-    text-align: center;
- }
- #missao {
-    font-size: 40px;
- }
- em strong{
-    color: rgb(255, 0, 0)
- }
+}
+
+#missao {
+    font-size: 20px
+}
+
+em strong {
+    color: #FF0000;
+}
+
+.itens {
+    font-style: italic
+}
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios {
+    width: 50%;
+}
